# fastapi_study

./: .gitignore  alembic.ini  pyproject.toml
backend/: database.py  main.py
backend/domain/question/: api.py  crud.py  question_api.py  schema.py
backend/models/: __init__.py  answer.py  question.py
migrations/: env.py
migrations/versions/: 5377a27f81e8_.py
