[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["Kevin Moon <skm04614@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
